terraform/azure-infra/nsg.tf
resource "azurerm_network_security_group" "nsg_prod" {
  name                = "nsg_prod"
  location            = azurerm_resource_group.rg_prod.location
  resource_group_name = azurerm_resource_group.rg_prod.name

  security_rule {
    name                       = "sshAllow"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "TCP"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = var.vnet_address_spaces[var.bastion_vnet_name]
    destination_address_prefix = var.subnet_address_spaces[var.prod_subnet_name]
  }
  security_rule {
    name                       = "httpAllow"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "TCP"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = var.subnet_address_spaces[var.prod_subnet_name]
  }
  security_rule {
    name                       = "BlockAll"
    priority                   = 4096
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  tags = {
    environment = "Production"
  }
}

resource "azurerm_subnet_network_security_group_association" "nas_prod_assosiate" {
  subnet_id                 = azurerm_subnet.subnet_prod.id
  network_security_group_id = azurerm_network_security_group.nsg_prod.id
}
